// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Links block renders correctly 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2 bcl-links-block"
  >
    <h2
      class="pb-3 mb-3 border-bottom bcl-heading"
    >
      More information
    </h2>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with horizontal 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2 bcl-links-block"
  >
    <h2
      class="pb-3 mb-3 border-bottom bcl-heading"
    >
      More information
    </h2>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with horizontal and with title and link 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2 bcl-links-block"
  >
    <h6
      class="pb-3 mb-3 border-bottom bcl-heading"
    >
      <a
        class="standalone"
        href="/example.html"
      >
        Links block test title
      </a>
    </h6>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with title 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2 bcl-links-block"
  >
    <h6
      class="pb-3 mb-3 border-bottom bcl-heading"
    >
      Links block test title
    </h6>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with transparent background 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2 bcl-links-block"
  >
    <h2
      class="pb-3 mb-3 border-bottom bcl-heading"
    >
      More information
    </h2>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with transparent background and with title and link 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2 bcl-links-block"
  >
    <h6
      class="pb-3 mb-3 border-bottom bcl-heading"
    >
      <a
        class="standalone"
        href="/example.html"
      >
        Links block test title
      </a>
    </h6>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          class="pb-3 d-inline-block standalone"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly without links 1`] = `<jest />`;
